Add more options and fix typos

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <div class="container">
 	<h1>Bath and Body Works Line Name Generator</h1>
-	<h2 class="margin-bottom-high">You can generate your next popular Bath and Body Works Line name using this button:</h2>
+	<h2 class="margin-bottom-high">You can generate your next popular Bath and Body Works line name using this button:</h2>
 	<button id="generate-button" class="margin-bottom-short">Generate!</button>
 
 	<h2 id="generated-line-text">Generated Line Name is:</h2>
@@ -133,6 +133,7 @@ const firstAdjectives = [
 	"Frosted",
 	"Light",
 	"Glowing",
+	"Iced",
 ];
 const firstAdjectiveLength = firstAdjectives.length;
 
@@ -151,6 +152,7 @@ const secondAdjectives = [
 	"Sugared",
 	"White",
 	"Happy",
+	"Italian",
 ];
 const secondAdjectiveLength = secondAdjectives.length;
 
@@ -220,6 +222,7 @@ const secondNouns = [
 	"Ivy",
 	"Sugar",
 	"Donut",
+	"Air"
 ];
 const secondNounLength = secondNouns.length;
 
