--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ h1, h2, h3, h4, h5, h6 {
 	color: white;
 	font-size: 100px;
 }
+
+@media only screen and (max-width: 720px) {
+  #generated-line-name {
+    font-size: 48px;
+  }
+}
 </style>
 
 </head>
